--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,26 @@
     </properties>
 
     <dependencies>
+        
+        <!--start of configuration dependencies-->
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>commons-jxpath</groupId>
+            <artifactId>commons-jxpath</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <!--end of configuration dependencies-->
+        
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
@@ -46,6 +66,7 @@
             <version>1.4</version>
             <scope>test</scope>
         </dependency>
+     
     </dependencies>
     <build>            
         <filters>
