added tests for chronicle to extract numbers from strings

--- a/filter.properties
+++ b/filter.properties
@@ -1,2 +1,8 @@
 #PLEASE DO NOT COMMIT THIS FILE IN PRODUCTION ENVIRONMENT
 log.level=info
+db.user=tumcyk
+db.password=mypass
+db.databaseName=/Users/toks/databases/mydb
+db.serverName=localhost
+db.port=1527
+db.create=no
