--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,12 @@
             <version>3.2.1</version>
         </dependency>
         <!--end of configuration dependencies-->
-        
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
