--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <maven.build.timestamp.format>dd/MM/yyyy HH:mm</maven.build.timestamp.format>
         <date>${maven.build.timestamp}</date>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.test.skip>true</maven.test.skip>
+        <maven.test.skip>false</maven.test.skip>
         <classpath.prefix>lib</classpath.prefix>
         <main.class>biz.letsweb.tasker.App</main.class>
     </properties>
@@ -55,7 +55,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
