upgrade apache deraby to 10.11

--- a/filter.properties
+++ b/filter.properties
@@ -5,4 +5,6 @@ db.password=mypass
 db.databaseName=/Users/toks/databases/mydb
 db.serverName=localhost
 db.port=1527
-db.create=no
+db.create=create
+db.type=EMBEDDED
+#db.type=CLIENT
