--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,11 @@
             <artifactId>derby</artifactId>
             <version>10.11.1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
         <!--logging-->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -91,7 +95,12 @@
             <version>1.4</version>
             <scope>test</scope>
         </dependency>
-     
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>            
         <filters>
