add test for duration

--- a/filter.properties
+++ b/filter.properties
@@ -2,9 +2,9 @@
 log.level=info
 db.user=tumcyk
 db.password=mypass
-db.databaseName=/Users/toks/databases/mydb
+db.databaseName=testdb
 db.serverName=localhost
 db.port=1527
 db.create=create
-db.type=EMBEDDED
-#db.type=CLIENT
+#db.type=EMBEDDED
+db.type=CLIENT
