--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=info, dev
+log4j.rootLogger=${log.level}, dev
 logFileName=update.log
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
