make version initially working from command line

--- a/filter.properties
+++ b/filter.properties
@@ -5,6 +5,6 @@ db.password=mypass
 db.databaseName=testdb
 db.serverName=localhost
 db.port=1527
-db.create=create
-#db.type=EMBEDDED
-db.type=CLIENT
+db.create=true
+db.type=EMBEDDED
+#db.type=CLIENT
